--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -3,11 +3,9 @@ kind: Component
 metadata:
   name: react-native-ux-cam
   description: React Native wrapper for uxcam.com.
-  annotations: []
 spec:
   type: library
   lifecycle: production
   domain: frontend-apps
-  system: unknown
+  system: native-modules
   owner: frontend-platform
-relations: []
